# syntropic137

./: .cursorignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETION-SUMMARY-PR28.md  CONTRIBUTING.md  DEEP-DIVE_AI-AGENTS.md  DEEP-DIVE_ARTIFACTS.md  DEEP-DIVE_SUMMARY.md  FINAL-SUMMARY.md  HANDOFF-INFRASTRUCTURE.md  HANDOFF-PHASE2-WEBHOOK-WORKFLOWS.md  HANDOFF-PROMPT.md  HANDOFF-SESSION-20251215.md  IMPLEMENTATION-SUMMARY.md  ISSUES.md  LICENSE  MANUAL-TEST-CHECKLIST.md  MERGE-CHECKLIST.md  PHASE-COMPLETION-CREATE-SCRIPT-AND-OPEN-PR.md  QUICK-START-PR28.md  README.md  RESEARCH_20260202_BOUNDED-CONTEXT-ANALYSIS.md  SECURITY.md  START-HERE.md  VSA-BUG-EXECUTE-COMMAND.md  VSA-VALIDATION-BASELINE-CORRECTED.txt  VSA-VIOLATIONS-BASELINE.md  aef-clusters.html  aef-codecity-v2.html  aef-codecity.html  aef-topology-3d.html  aef-vsa.html  conftest.py  fitness-exceptions.toml  (+9 more)
apps/aef-cli/: pyproject.toml
apps/aef-cli-legacy/: pyproject.toml
apps/aef-cli-legacy/src/aef_cli/: __init__.py  __main__.py
apps/aef-cli-legacy/src/aef_cli/commands/: config.py
apps/aef-cli-legacy/tests/: test_main.py  test_workflow_run.py
apps/aef-cli/src/aef_cli/: __init__.py  __main__.py  _output.py  main.py
apps/aef-cli/src/aef_cli/commands/: __init__.py  agent.py  config.py  control.py  triggers.py  workflow.py
apps/aef-cli/tests/: test_agent_commands.py  test_cli_commands.py  test_config_commands.py  test_control_commands.py  test_main.py  test_trigger_commands.py  test_workflow_commands.py  test_workflow_e2e.py  test_workflow_run.py
apps/aef-dashboard/: Dockerfile  pyproject.toml
apps/aef-dashboard/src/aef_dashboard/: config.py  main.py  read_models.py
apps/aef-dashboard/src/aef_dashboard/api/: __init__.py  artifacts.py  control.py  conversations.py  costs.py  events.py  execution.py  executions.py  metrics.py  observability.py  sessions.py  triggers.py  webhooks.py  websocket.py  workflows.py
apps/aef-dashboard/src/aef_dashboard/middleware/: webhook_recorder.py
apps/aef-dashboard/src/aef_dashboard/models/: __init__.py  schemas.py
apps/aef-dashboard/src/aef_dashboard/services/: __init__.py  control.py  execution.py
apps/aef-dashboard/tests/: __init__.py  conftest.py  test_api.py  test_control.py  test_events_from_recordings.py  test_webhooks.py
apps/syn-api/: pyproject.toml
apps/syn-api/src/syn_api/: __init__.py  _wiring.py  _wiring_db.py  config.py  main.py  prefix_resolver.py  types.py
apps/syn-api/src/syn_api/middleware/: webhook_recorder.py
apps/syn-api/src/syn_api/routes/: __init__.py  agents.py  artifacts.py  control.py  conversations.py  costs.py  events.py  execution.py  executions.py  github.py  insights.py  metrics.py  observability.py  organizations.py  repos.py  sessions.py  sse.py  systems.py  triggers.py  webhooks.py  websocket.py  workflows.py
apps/syn-api/src/syn_api/services/: __init__.py  check_run_poller.py  config.py  credentials.py  github_event_poller.py  lifecycle.py  realtime.py  reconciliation.py  seeding.py  webhook_health_tracker.py
apps/syn-api/src/syn_api/v1/: __init__.py  agents.py  config.py  conversations.py  executions.py  github.py  insights.py  lifecycle.py  organizations.py  realtime.py  repos.py  sessions.py  systems.py  triggers.py  workflows.py
apps/syn-api/tests/: test_api_agents.py  test_api_artifacts.py  test_api_config.py  test_api_conversations.py  test_api_executions.py  test_api_sessions.py  test_api_triggers.py  test_api_types.py  test_api_workflow_export.py  test_api_workflows.py  test_check_run_poller.py  test_cold_start_fence.py  test_cold_start_flood_694.py  test_cross_source_dedup.py  test_endpoint_artifacts.py  test_endpoint_workflow_export.py  test_endpoint_workflows.py  test_endpoint_workflows_from_yaml.py  test_execute_repo_validation.py  test_github_event_poller.py  test_github_repos.py  test_lint_rules.py  test_organization_persistence.py  test_pending_sha_durability.py  test_prompt_builtins.py  test_tool_operation_contract.py  test_webhook_health_poller_mode.py  test_webhooks_acknowledgments.py  test_webhooks_endpoint.py  test_webhooks_handlers.py  test_webhooks_push_events.py  test_webhooks_services.py  test_webhooks_signature.py  test_wiring_telemetry_env.py
apps/syn-api/tests/integration/: test_trigger_scenarios.py
apps/syn-cli/: pyproject.toml
apps/syn-cli/src/syn_cli/: __init__.py  __main__.py  _async.py  _output.py  client.py  main.py
apps/syn-cli/src/syn_cli/commands/: __init__.py  _api_helpers.py  _cost_models.py  _marketplace_client.py  _marketplace_models.py  _package_models.py  _package_resolver.py  _session_models.py  _workflow_models.py  _workflow_resolver.py  agent.py  artifacts.py  config.py  control.py  conversations.py  costs.py  events.py  execution.py  insights.py  metrics.py  observe.py  org.py  repo.py  sessions.py  system.py  triggers.py  watch.py  workflow.py
apps/syn-cli/tests/: test_agent_commands.py  test_api_helpers.py  test_artifact_commands.py  test_config_commands.py  test_control_commands.py  test_cost_commands.py  test_export_commands.py  test_export_roundtrip.py  test_install_commands.py  test_main.py  test_marketplace_client.py  test_marketplace_commands.py  test_marketplace_models.py  test_metrics_commands.py  test_observe_commands.py  test_output.py  test_package_resolver.py  test_search_commands.py  test_session_commands.py  test_trigger_commands.py  test_update_commands.py  test_workflow_commands.py
apps/syn-cli/tests/commands/: test_workflow_resolver.py
apps/syn-dashboard/: Dockerfile  pyproject.toml
apps/syn-dashboard/src/syn_dashboard/: __init__.py  config.py  main.py
apps/syn-dashboard/src/syn_dashboard/api/: __init__.py  artifacts.py  control.py  conversations.py  costs.py  events.py  execution.py  executions.py  metrics.py  observability.py  sessions.py  (+4 more)
apps/syn-dashboard/tests/: conftest.py  test_api.py  test_api_contract.py  test_control.py  test_events_from_recordings.py  test_webhooks.py
lib/ui-feedback/backend/ui-feedback-api/: README.md  pyproject.toml
(+1085 files in other folders)
