[project]
name = "agentic-engineering-framework"
version = "0.1.0"
description = "Event-sourced system for tracking AI agent work across workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AgentParadise" }]
keywords = ["ai", "agents", "event-sourcing", "workflows", "metrics"]

# Workspace member dependencies
dependencies = [
    "aef-cli",
    "aef-collector",
    "aef-dashboard",
    "aef-domain",
    "aef-adapters",
    "aef-shared",
    "event-sourcing-python",
    "grpcio>=1.60", # Required by event-sourcing SDK
    "claude-agent-sdk>=0.1.11",
]

# Core agentic SDK (required for full functionality)
[project.optional-dependencies]
agentic = [
    "claude-agent-sdk>=0.1.9",  # Core Claude Agent SDK
]
all = [
    "claude-agent-sdk>=0.1.9",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12",
    "psycopg[binary]>=3.3.0",
    "asyncpg>=0.31.0",
]

[build-system]
requires = ["uv_build>=0.9.13"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["apps/*", "packages/*"]
exclude = ["apps/aef-dashboard-ui"]

[tool.uv.sources]
aef-cli = { workspace = true }
aef-collector = { workspace = true }
aef-dashboard = { workspace = true }
aef-domain = { workspace = true }
aef-adapters = { workspace = true }
aef-shared = { workspace = true }
aef-perf = { workspace = true }
aef-tokens = { workspace = true }
# Submodule dependencies
event-sourcing-python = { path = "lib/event-sourcing-platform/event-sourcing/python" }
agentic-hooks = { path = "lib/agentic-primitives/lib/python/agentic_hooks" }
agentic-logging = { path = "lib/agentic-primitives/lib/python/agentic_logging" }

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/*/src", "packages/*/src"]
exclude = [
    "lib/",
    ".venv/",
    "__pycache__/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
# Test files often have unused args in mocks implementing interfaces
"**/test_*.py" = ["ARG001", "ARG002"]
"**/tests/**" = ["ARG001", "ARG002"]
# Scripts may have planned-but-not-implemented params
"scripts/*.py" = ["ARG001"]
# gRPC handlers require context param even if unused
"**/token_injector.py" = ["ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["aef_cli", "aef_collector", "aef_dashboard", "aef_domain", "aef_adapters", "aef_shared", "aef_perf"]

[tool.mypy]
python_version = "3.12"
# Strict mode with pragmatic exceptions for existing code
strict = false  # Disabled until existing type debt is resolved
warn_return_any = false  # Too many violations in projections
warn_unused_ignores = false  # Type ignores may vary between envs (local vs CI)
disallow_untyped_defs = false  # TODO: Enable after fixing 26+ violations
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # Decorators often lack types
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true
# Exclude test files from type checking (both /tests/ dirs and co-located test_*.py)
exclude = [
    "^.*/tests/.*$",
    "^.*test_.*\\.py$",
]

# Per-module ignores for optional dependencies and internal modules
[[tool.mypy.overrides]]
module = [
    "redis.*",
    "aiohttp.*",
    "fakeredis.*",
    "aef_adapters.*",  # Internal module cross-references
    "aef_tokens.*",
    "aef_shared.*",
    "aef_domain.*",
]
ignore_missing_imports = true

# Ignore missing imports for optional dependencies
[[tool.mypy.overrides]]
module = [
    "anthropic",
    "anthropic.*",
    "openai",
    "openai.*",
    "asyncpg",
    "asyncpg.*",
    "agentic_hooks",
    "agentic_hooks.*",
    "agentic_logging",
    "agentic_logging.*",
    "sse_starlette",
    "sse_starlette.*",
    "uvicorn",
    "uvicorn.*",
    "grpc",
    "grpc.*",
    "supabase",
    "supabase.*",
    "minio",
    "minio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "apps/aef-cli/tests",
    "apps/aef-dashboard/tests",
    "packages/aef-collector/tests",
    "packages/aef-domain/tests",
    "packages/aef-domain/src",  # VSA co-located tests
    "packages/aef-adapters/tests",
    "packages/aef-shared/tests",
]
pythonpath = [
    "apps/aef-cli/src",
    "apps/aef-dashboard/src",
    "packages/aef-collector/src",
    "packages/aef-domain/src",
    "packages/aef-adapters/src",
    "packages/aef-shared/src",
]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["-ra", "-q", "--strict-markers"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use Docker services)",
    "e2e: End-to-end tests (full system)",
]

[tool.coverage.run]
branch = true
source = ["apps", "packages"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "raise typer.Exit",  # CLI exits are hard to test
]
# Exclude interactive CLI commands from coverage (require real API keys)
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/agents/claude.py",  # Requires Anthropic API
    "*/agents/openai.py",  # Requires OpenAI API
    "*/storage/postgres.py",  # Requires running PostgreSQL
]
