[project]
name = "aef-cli"
version = "0.2.0"
description = "CLI for Agentic Engineering Framework — thin wrapper over aef-api"
requires-python = ">=3.12"

dependencies = [
    "aef-api",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["uv_build>=0.9.13"]
build-backend = "uv_build"

[project.scripts]
aef = "aef_cli.main:app"
