[project]
name = "syn-cli"
version = "0.7.0"
description = "CLI for Syntropic137 — thin wrapper over syn-api"
requires-python = ">=3.12"

dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["uv_build>=0.9.13"]
build-backend = "uv_build"

[project.scripts]
syn = "syn_cli.main:app"
