[project]
name = "syn-dashboard"
version = "0.1.0"
description = "Dashboard API for Syntropic137"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.2.0",
    "asyncpg>=0.30.0",
    "agentic-logging",  # Structured logging from agentic-primitives
    "syn-api",          # Programmatic API layer (wraps domain/adapters/shared)
    "syn-shared",
    "syn-domain",
    "syn-adapters",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["uv_build>=0.9.13"]
build-backend = "uv_build"

[project.scripts]
syn-dashboard = "syn_dashboard.main:run"
